# migrate-5.0.7

./: .gitattributes  .gitignore  .gitmodules  HISTORY  LICENSE  Makefile.am  README  README.md  configure.ac
contribution/: bayes-posthoc-analysis.R  bayes-posthoc-analysis_Fourdrilis.R  fasta2mig  fastas2mig  mig2snp.py  structure2mig.py
contribution/fasta2genotype/: README  fasta2genotype.py
contribution/migrate_stacks/: README  fasta2genotype.py  stacks2migrate.py
example/: GUIDANCE  README  infile.assign  infile.gap  infile.hapmap  infile.snp  outfile-gap  outfile-twoswisstowns  outfile-twoswisstowns2  outfile_hapmap  outfile_msat  outfile_snp  parmfile.assign  parmfile.gap  parmfile.hapmap  parmfile.msat  parmfile.snp  parmfile.taita.assign  parmfile.twoswisstowns  parmfile.twoswisstowns-assignfreq  parmfile.twoswisstowns2  runtest  twoswisstowns  twoswisstowns.assign
example/3pop/: README  datefile  infile  outfile  parmfile  seedms  tree
lib/SFMT-src-1.5.1/: SFMT.c  test-arm-M19937  test-std-M11213  test-std-M1279  test-std-M132049  test-std-M19937  test-std-M216091  test-std-M2281  test-std-M4253  test-std-M44497  test-std-M607  test-std-M86243
src/: Makefile.am  assignment.c  assignment.h  autotune.c  bayes.c  bayes.h  calculator.c  conf.h  correlation.c  data.c  definitions.h  growth.c  haplotype.c  haplotype.h  hash.c  hash.h  heating.c  hermite_interpoly.c  hermite_interpoly.h  histogram.c  kernel_smooth.c  kernel_smooth.h  main.c  marginallike.c  marginallike.h  mcmc.h  mcmc1.c  menu.c  migevents.c  migrate_mpi.c  migrate_mpi.h  migration.h  mittag_leffler.c  mittag_leffler.h  mittag_leffler_interpol_data.c  mutationmodel.c  options.c  pretty-old.c  pretty.c  pretty.h  (+27 more)
